more consistent spacing between elements by fixing signout position

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -270,7 +270,7 @@ button {
 	text-decoration: none;
 	font-size: 10px;
 	text-transform: uppercase;
-	top: calc(20vh - 17px);
+	top: calc(19vh - 10px);
 	right: 7.5%;
 }
 
